tests/error/if_at_end.clac
// TEST: expect_compile_error
1 if
